--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -21,7 +21,24 @@
                 <h1>Tips for Optimizing Django Database Queries<br>
                     <small class="text-muted"> PyDay BCN 2019</small>
                 </h1>
-                <br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-12">
+                <hr>
+            </div>
+            <div class="col-sm">
+                <p class="alert alert-primary lead" role="alert">
+                    Number of queries: <span id="queries"></span>
+                </p>
+            </div>
+            <div class="col-sm">
+                <p class="alert alert-primary lead" role="alert">
+                    Time: <span id="time"></span>
+                </p>
+            </div>
+            <div class="form-group col-12">
+                <hr>
             </div>
         </div>
         <div class="row">
@@ -48,6 +65,7 @@
                         </tr>
                     </tfoot>
                 </table>
+                <br>
             </div>
         </div>
     </div>
@@ -57,6 +75,8 @@
     <script src="{% static "popper/js/popper-1.14.7.min.js" %}"></script>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
     <script src="{% static "dataTables/js/datatables.min.js" %}"></script>
+
+    <script src="{% static "products/products.js" %}"></script>
 
     <script>
         $(document).ready( function () {
@@ -69,6 +89,7 @@
                     "type": "POST",
                     "headers": {'X-CSRFToken': '{{ csrf_token }}'},
                 },
+                "fnDrawCallback": table_callback('{{ csrf_token }}'),
                 "columns": [
                     { "data": "name" },
                     { "data": "position" },
