Doesn't make sense to sort by variations

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -99,7 +99,7 @@
                     { "data": "name" },
                     { "data": "brand" },
                     { "data": "category_level_1" },
-                    { "data": "variations" },
+                    { "data": "variations", "orderable": false },
                     { "data": "price" },
                     { "data": "margin" },
                     { "data": "last_month_sales" },
