Change margin by profit

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -52,7 +52,7 @@
                             <th>Category level 1</th>
                             <th>Variations</th>
                             <th>Price</th>
-                            <th>Margin</th>
+                            <th>Profit</th>
                             <th>Last month sales</th>
                         </tr>
                     </thead>
@@ -64,7 +64,7 @@
                             <th>Category level 1</th>
                             <th>Variations</th>
                             <th>Price</th>
-                            <th>Margin</th>
+                            <th>Profit</th>
                             <th>Last month sales</th>
                         </tr>
                     </tfoot>
@@ -101,7 +101,7 @@
                     { "data": "category_level_1" },
                     { "data": "variations", "orderable": false },
                     { "data": "price" },
-                    { "data": "margin" },
+                    { "data": "profit" },
                     { "data": "last_month_sales" },
                 ]
             } );
